<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_twotone_today_24"
            android:title="@string/time_table" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/productivity" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>